--- a/assets/css/style_rotate_admin.css
+++ b/assets/css/style_rotate_admin.css
@@ -2,6 +2,8 @@
 	position:relative;
 	margin-top:0px;
 	width:100%;
+    /* Clear fix cho các phần tử float bên trong */
+    overflow: hidden; 
 }
 #wrap-game .option-left {
 	width:43%;
@@ -75,39 +77,65 @@
 	height:30px;
 	float:left;
 }
+
+/* --- [FIX CĂN GIỮA CANVAS ADMIN] --- */
 #wrap-game .preview-game {
-	width:45%;
+	/* Tăng độ rộng để canvas thoải mái hơn */
+	width: 47%; 
 	position:relative;
 	float:left;
+    
+    /* Dùng Flexbox ngay tại wrapper cha để căn giữa con (#area-game) */
+    display: flex;
+    justify-content: center; /* Căn giữa ngang */
+    align-items: flex-start; /* Căn trên cùng */
+    
+    box-sizing: border-box;
+    padding: 10px;
+    background: #fdfdfd; /* Màu nền nhẹ để thấy khung */
+    border: 1px dashed #ccc; /* Viền nét đứt để dễ nhận biết vùng preview */
+    min-height: 520px; /* Đảm bảo chiều cao tối thiểu */
 }
-
 
 #wrap-game input[type=text] {
 	width:150px;
 }
-#area-game {
-	width:100%;
-	margin-left:auto;
-	margin-right:auto;
-	
+
+#wrap-game #area-game {
+    /* Quan trọng: Bỏ width 100% để nó co về đúng kích thước Canvas P5 tạo ra */
+	width: auto; 
+	margin: 0 auto;
+    position: relative;
+    z-index: 10;
 }
-#area-game canvas {
-	border:none;
-	width:100%;
-	z-index:10;
+
+#wrap-game #area-game canvas {
+	border: none;
+	z-index: 10;
+    
+    /* Reset style để tránh bị kéo lệch */
+    display: block !important;
+    margin: 0 auto !important;
+    
+    /* BỎ width: 100% !important; -> Nguyên nhân gây méo/lệch tâm */
+    width: auto !important; 
+    height: auto !important;
+    max-width: 100%;
 }
+/* ----------------------------------- */
+
 .dataTables_wrapper .dataTables_length select {
-    width: 3.0rem;
+	width: 3.0rem;
 }
 .dataTables_wrapper {
-    padding-top:15px;
+	padding-top:15px;
 }
 #wrap-game .wp-picker-container .wp-color-result.button {
-    /*margin: -11px 6px 6px 0;*/
+	/*margin: -11px 6px 6px 0;*/
 	position:relative;
 }
 #wrap-game li {
-    margin-bottom: 0px;
+	margin-bottom: 0px;
 	margin-top:0px;
 }
 #wrap-game input.option-input {
@@ -179,35 +207,35 @@
 }
 .rotate-notice {
 	border: 1px solid #4F800D;
-    padding: 15px 15px;
-    margin: 15px 0;
-    background: #ffffff;
+	padding: 15px 15px;
+	margin: 15px 0;
+	background: #ffffff;
 	box-shadow: 3px 5px rgba(0,0,0,0.1);
-    -moz-border-radius: 3px;
-    border-radius: 3px;
-    -webkit-border-radius: 3px;
-    position: relative;
-    overflow: hidden;
+	-moz-border-radius: 3px;
+	border-radius: 3px;
+	-webkit-border-radius: 3px;
+	position: relative;
+	overflow: hidden;
 }
 .rotate-notice .column-left {
 	box-sizing: border-box;
-    display: inline-block;
-    background: #ffffff;
-    padding: 5px;
-    -moz-border-radius: 2px;
-    border-radius: 2px;
-    -webkit-border-radius: 2px;
-    width: 266px;
+	display: inline-block;
+	background: #ffffff;
+	padding: 5px;
+	-moz-border-radius: 2px;
+	border-radius: 2px;
+	-webkit-border-radius: 2px;
+	width: 266px;
 }
 .rotate-notice .column-right {
 	position: absolute;
-    top: 12px;
-    left: 285px;
-    margin-left: 25px;
+	top: 12px;
+	left: 285px;
+	margin-left: 25px;
 }
 .rotate-notice .column-right p {
 	margin: 0.2em 0;
-    padding: 2px;
+	padding: 2px;
 	font-size:14px;
 	color: #000;
 }
@@ -218,12 +246,12 @@
 	padding:5px 25px;
 	text-decoration:none;
 	border: 1px solid #006699;
-    -moz-border-radius: 2px;
-    border-radius: 2px;
-    -webkit-border-radius: 2px;
-    background: #029DD6;
-    background-image: -webkit-gradient(linear, 0% 0, 0% 100%, from(#029DD6), to(#0079B1));
-    background-image: -moz-linear-gradient(0% 100% 90deg, #0079B1, #029DD6);
+	-moz-border-radius: 2px;
+	border-radius: 2px;
+	-webkit-border-radius: 2px;
+	background: #029DD6;
+	background-image: -webkit-gradient(linear, 0% 0, 0% 100%, from(#029DD6), to(#0079B1));
+	background-image: -moz-linear-gradient(0% 100% 90deg, #0079B1, #029DD6);
 }
 .upgrade {
 	width:100%;
@@ -241,13 +269,13 @@
 	text-transform:uppercase;
 }
 .line {
-    border-top-width: 2px;
-    border-left-width: 0px;
-    border-right-width: 0px;
-    border-bottom-width: 0px;
-    border-style: solid;
-    border-color: #00CCD6;
-    margin-top: 10.5px;
+	border-top-width: 2px;
+	border-left-width: 0px;
+	border-right-width: 0px;
+	border-bottom-width: 0px;
+	border-style: solid;
+	border-color: #00CCD6;
+	margin-top: 10.5px;
 	width:10%;
 	margin-left:auto;
 	margin-right:auto;
@@ -257,9 +285,9 @@
 	width:46%;
 	float:left;
 	position:relative;
-    padding: 15px 15px;
-    margin: 0px;
-    background: transparent;
+	padding: 15px 15px;
+	margin: 0px;
+	background: transparent;
 }
 .upgrade .list-fee h3 {
 	color:#00CCD6;
@@ -277,26 +305,26 @@
 }
 .upgrade .list-fee ul.checklist li:before{
 	position: relative;
-    content: '\2713';
-    left: 0;
-    right: 0;
+	content: '\2713';
+	left: 0;
+	right: 0;
 	color:#00CCD6;
 }
 .underline:after {
-    position: absolute;
-    content: '';
-    height: 2px;
-    bottom: -15px;
-    margin: 5px auto;
-    left: 0;
-    right: 0;
-    width: 25%;
-    background: #df3a2c;
-    -o-transition: .5s;
-    -ms-transition: .5s;
-    -moz-transition: .5s;
-    -webkit-transition: .5s;
-    transition: .5s;
+	position: absolute;
+	content: '';
+	height: 2px;
+	bottom: -15px;
+	margin: 5px auto;
+	left: 0;
+	right: 0;
+	width: 25%;
+	background: #df3a2c;
+	-o-transition: .5s;
+	-ms-transition: .5s;
+	-moz-transition: .5s;
+	-webkit-transition: .5s;
+	transition: .5s;
 }
 .wrap-no-data {
 	padding:15px 15px;
@@ -326,4 +354,44 @@ table td.shortedit {
 	background: #FFFFFF;
 	border:1px solid #E3E3E4;
 	padding:3px 5px;
+}
+
+ /* Pagination Container */
+.zutalw-pagination { 
+	margin: 5px 0; 
+	text-align: right; 
+	line-height: 2;
+}
+
+/* Pagination Button Base Style */
+.zutalw-pagination .page-numbers {
+	display: inline-block;
+	padding: 3px 5px;
+	margin: 0 2px;
+	text-decoration: none;
+	background: #fff;
+	color: #0073aa;
+	border: 1px solid #0073aa;
+	border-radius: 4px; /* Bo góc nhẹ như hình pages.png */
+	font-weight: 500;
+	min-width: 15px;
+	text-align: center;
+}
+
+/* Active/Current Page Style */
+.zutalw-pagination .page-numbers.current {
+	background: #0073aa; /* Màu xanh đặc trưng của WP */
+	color: #fff;
+	border-color: #0073aa;
+}
+
+/* Hover State */
+.zutalw-pagination .page-numbers:hover:not(.current) {
+	background: #f0f0f0;
+	color: #00a0d2;
+}
+
+/* Next/Previous Buttons */
+.zutalw-pagination .next, .zutalw-pagination .prev {
+	font-weight: bold;
 }
